[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.10"
assert_fs = "1.0.10"
predicates = "3.0.2"
